--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sass",
   "main": "sass",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass --watch ./sass:./css"
   },
   "repository": {
     "type": "git",
